force-app/main/default/objects/Sponsorship_Tier__c/Sponsorship_Tier__c.object-meta.xml
<CustomObject>
    <description>Sponsorship tier definitions per event per year. Replaces the per-year sponsorship xlsx files in the Drive (2023, 2024 Sponsorship Levels). Each row is one tier (Gold, Silver, etc.) at one event in one year, with associated cost + benefits.</description>
    <label>Sponsorship Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsorship Tiers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>