force-app/main/default/objects/Sponsorship_Tier__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <description>What the sponsor receives: ad size, table count, logo placement, recognition, ticket allotment, etc.</description>
    <label>Benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>