force-app/main/default/objects/Sponsorship_Tier__c/fields/Fundraising_Event__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The event this tier belongs to. Restrict delete: events with tiers can't be deleted directly; remove tiers first. (Cascade delete on lookups requires a Salesforce support request to enable on standard custom objects.)</description>
    <label>Fundraising Event</label>
    <referenceTo>Fundraising_Event__c</referenceTo>
    <relationshipLabel>Sponsorship Tiers</relationshipLabel>
    <relationshipName>Sponsorship_Tiers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>