force-app/main/default/objects/Sponsorship_Tier__c/fields/Slots_Available__c.field-meta.xml
<CustomField>
    <fullName>Slots_Available__c</fullName>
    <description>How many sponsors can claim this tier. Null = unlimited. Use 1 for exclusive tiers (Title sponsor).</description>
    <label>Slots Available</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>