force-app/main/default/objects/Sponsorship_Tier__c/fields/Tier_Cost__c.field-meta.xml
<CustomField>
    <fullName>Tier_Cost__c</fullName>
    <description>Sponsor pays this amount to claim this tier.</description>
    <label>Tier Cost</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>