force-app/main/default/objects/Sponsorship_Tier__c/fields/Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Tier_Level__c</fullName>
    <description>The named sponsorship level (Gold, Silver, Bronze, Title, Presenting, etc.). Unrestricted so admins can add levels per event without metadata changes.</description>
    <label>Tier Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Title</fullName><default>false</default><label>Title</label></value>
            <value><fullName>Presenting</fullName><default>false</default><label>Presenting</label></value>
            <value><fullName>Platinum</fullName><default>false</default><label>Platinum</label></value>
            <value><fullName>Gold</fullName><default>false</default><label>Gold</label></value>
            <value><fullName>Silver</fullName><default>false</default><label>Silver</label></value>
            <value><fullName>Bronze</fullName><default>false</default><label>Bronze</label></value>
            <value><fullName>Friend</fullName><default>false</default><label>Friend</label></value>
            <value><fullName>Table</fullName><default>false</default><label>Table</label></value>
            <value><fullName>Individual</fullName><default>false</default><label>Individual</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>